--- a/src/app/shared/components/day-filters/day-filters.component.scss
+++ b/src/app/shared/components/day-filters/day-filters.component.scss
@@ -3,6 +3,14 @@ mat-form-field {
   width: 100%;
 }
 
+.dates-container {
+  margin-top: -10px;
+}
+
+.quick-dates-container {
+  margin-top: -17px;
+}
+
 .archived {
   color: var(--light-theme-warn);
 }
