--- a/src/app/shared/components/day-filters/day-filters.component.html
+++ b/src/app/shared/components/day-filters/day-filters.component.html
@@ -1,71 +1,69 @@
- <div class="mb-1">
-   <!-- Filter -->
-   <mat-form-field appearance="outline">
-     <mat-label>{{'SEARCH_DAY' | translate}}</mat-label>
-     <input matInput [(ngModel)]="dayFilter" (ngModelChange)="goToQuery()" attr.aria-label="{{'SEARCH_DAY' | translate}}" autocomplete="off">
-     <fa-icon *ngIf="!dayFilter" matSuffix class="mat-icon-20 mat-hint mr-h" icon="search"></fa-icon>
-     <button class="reset-button" mat-button matSuffix *ngIf="dayFilter" mat-icon-button attr.aria-label="{{'RESET_FILTER' | translate}}" (click)="resetFilter()">
-       <fa-icon class="mat-icon-20 mat-hint" icon="times"></fa-icon>
-     </button>
-   </mat-form-field>
+<div class="mb-2">
+  <div *ngIf="headerService.searchStatus">
+    <!-- Filter -->
+    <mat-form-field appearance="outline">
+      <mat-label>{{'SEARCH_DAY' | translate}}</mat-label>
+      <input matInput [(ngModel)]="dayFilter" (ngModelChange)="goToQuery()" attr.aria-label="{{'SEARCH_DAY' | translate}}" autocomplete="off">
+      <fa-icon *ngIf="!dayFilter" matSuffix class="mat-icon-20 mat-hint mr-h" icon="search"></fa-icon>
+      <button class="reset-button" mat-button matSuffix *ngIf="dayFilter" mat-icon-button attr.aria-label="{{'RESET_FILTER' | translate}}" (click)="resetFilter()">
+        <fa-icon class="mat-icon-20 mat-hint" icon="times"></fa-icon>
+      </button>
+    </mat-form-field>
 
-   <!-- Advanced filters -->
-   <div fxLayout="row" class="mb-1">
-     <span fxFlex></span>
+    <!-- Dates -->
+    <div class="dates-container" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center" fxLayoutGap="8px">
 
-     <a class="link mat-small pointer" (click)="showMore()">
-       {{'ADVANCED_FILTERS' | translate}}
-       <fa-icon class="ml-q mat-icon-14" [icon]="moreInfoConfig.icon"></fa-icon>
-     </a>
-   </div>
+      <div class="dates" fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="5px" fxFlex="66" fxFlex.xs="100">
+        <mat-form-field appearance="outline" fxFlex="50">
+          <mat-label>{{'FORM.SINCE' | translate}}</mat-label>
+          <input class="pl-h" matInput [matDatepicker]="dateSincePicker" [(ngModel)]="dateSince" (ngModelChange)="selectDate()" [max]="dateUntil">
+          <mat-datepicker #dateSincePicker></mat-datepicker>
+          <mat-datepicker-toggle class="mat-hint" matPrefix [for]="dateSincePicker">
+          </mat-datepicker-toggle>
+          <button class="reset-button" mat-button matSuffix *ngIf="dateSince" mat-icon-button attr.aria-label="{{'RESET_FILTER' | translate}}" (click)="resetDate('dateSince')">
+            <fa-icon class="mat-icon-20 mat-hint" icon="times"></fa-icon>
+          </button>
+        </mat-form-field>
 
-   <div *ngIf="moreInfoConfig.show" class="mt-1">
+        <mat-form-field appearance="outline" fxFlex="50">
+          <mat-label>{{'FORM.UNTIL' | translate}}</mat-label>
+          <input class="pl-h" matInput [matDatepicker]="dateUntilPicker" [(ngModel)]="dateUntil" (ngModelChange)="selectDate()" [min]="dateSince">
+          <mat-datepicker #dateUntilPicker></mat-datepicker>
+          <mat-datepicker-toggle class="mat-hint" matPrefix [for]="dateUntilPicker">
+          </mat-datepicker-toggle>
+          <button class="reset-button" mat-button matSuffix *ngIf="dateUntil" mat-icon-button attr.aria-label="{{'RESET_FILTER' | translate}}" (click)="resetDate('dateUntil')">
+            <fa-icon class="mat-icon-20 mat-hint" icon="times"></fa-icon>
+          </button>
+        </mat-form-field>
+      </div>
 
-     <!-- Dates -->
-     <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center" fxLayoutGap="8px">
+      <!-- Select quick date -->
+      <mat-form-field appearance="outline" fxFlex="33" [ngClass.xs]="{'quick-dates-container': true}">
+        <mat-label>{{'FORM.CUSTOM_DATES' | translate}}</mat-label>
+        <mat-select attr.aria-label="{{'FORM.CUSTOM_DATES' | translate}}" [(ngModel)]="quickDate" (ngModelChange)="goToQuery()">
+          <mat-option *ngFor="let date of quickDates" [value]="date">
+            {{date.name | translate}}
+          </mat-option>
+        </mat-select>
+        <fa-icon matPrefix class="mat-icon-20 mat-hint pr-h" icon="calendar"></fa-icon>
+      </mat-form-field>
 
-       <div class="dates" fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="5px" fxFlex="66" fxFlex.xs="100">
-         <mat-form-field appearance="outline" fxFlex="50">
-           <mat-label>{{'FORM.SINCE' | translate}}</mat-label>
-           <input class="pl-h" matInput [matDatepicker]="dateSincePicker" [(ngModel)]="dateSince" (ngModelChange)="selectDate()" [max]="dateUntil">
-           <mat-datepicker #dateSincePicker></mat-datepicker>
-           <mat-datepicker-toggle class="mat-hint" matPrefix [for]="dateSincePicker">
-           </mat-datepicker-toggle>
-           <button class="reset-button" mat-button matSuffix *ngIf="dateSince" mat-icon-button attr.aria-label="{{'RESET_FILTER' | translate}}" (click)="resetDate('dateSince')">
-             <fa-icon class="mat-icon-20 mat-hint" icon="times"></fa-icon>
-           </button>
-         </mat-form-field>
+    </div>
 
-         <mat-form-field appearance="outline" fxFlex="50">
-           <mat-label>{{'FORM.UNTIL' | translate}}</mat-label>
-           <input class="pl-h" matInput [matDatepicker]="dateUntilPicker" [(ngModel)]="dateUntil" (ngModelChange)="selectDate()" [min]="dateSince">
-           <mat-datepicker #dateUntilPicker></mat-datepicker>
-           <mat-datepicker-toggle class="mat-hint" matPrefix [for]="dateUntilPicker">
-           </mat-datepicker-toggle>
-           <button class="reset-button" mat-button matSuffix *ngIf="dateUntil" mat-icon-button attr.aria-label="{{'RESET_FILTER' | translate}}" (click)="resetDate('dateUntil')">
-             <fa-icon class="mat-icon-20 mat-hint" icon="times"></fa-icon>
-           </button>
-         </mat-form-field>
-       </div>
+    <div *ngIf="!hideArchivedFilter" class="mt-h mb-1" fxLayout="row" fxLayoutAlign="end center">
+      <fa-icon class="mat-icon-20 mat-hint pr-1" icon="box" [ngClass]="{'archived': showArchived}"></fa-icon>
+      <mat-slide-toggle labelPosition="before" (change)="goToQuery()" [(ngModel)]="showArchived">
+        {{'FORM.SHOW_ARCHIVED' | translate}}
+      </mat-slide-toggle>
+    </div>
+  </div>
 
-       <!-- Select quick date -->
-       <mat-form-field appearance="outline" fxFlex="33">
-         <mat-label>{{'FORM.CUSTOM_DATES' | translate}}</mat-label>
-         <mat-select attr.aria-label="{{'FORM.CUSTOM_DATES' | translate}}" [(ngModel)]="quickDate" (ngModelChange)="goToQuery()">
-           <mat-option *ngFor="let date of quickDates" [value]="date">
-             {{date.name | translate}}
-           </mat-option>
-         </mat-select>
-         <fa-icon matPrefix class="mat-icon-20 mat-hint pr-h" icon="calendar"></fa-icon>
-       </mat-form-field>
-
-     </div>
-
-     <div *ngIf="!hideArchivedFilter" class="mt-h mb-1" fxLayout="row" fxLayoutAlign="end center">
-       <fa-icon class="mat-icon-20 mat-hint pr-1" icon="box" [ngClass]="{'archived': showArchived}"></fa-icon>
-       <mat-slide-toggle labelPosition="before" (change)="goToQuery()" [(ngModel)]="showArchived">
-         {{'FORM.SHOW_ARCHIVED' | translate}}
-       </mat-slide-toggle>
-     </div>
-   </div>
- </div>
+  <!-- clean all filters -->
+  <div *ngIf="dayFilter || dateSince || dateUntil || showArchived || quickDate" class="selects" fxLayout="row" fxLayoutAlign="space-between center">
+    <span fxFlex></span>
+    <button mat-button color="warn" class="badge badge-fill warn mat-small pointer" (click)="cleanFilters()">
+      {{'CLEAN_ALL_FILTERS' | translate}}
+      <fa-icon class="ml-q mat-icon-14" icon="times"></fa-icon>
+    </button>
+  </div>
+</div>
