--- a/src/app/classroom/daily/components/day-list/day-list.component.html
+++ b/src/app/classroom/daily/components/day-list/day-list.component.html
@@ -3,9 +3,13 @@
 
     <a13-day-filters [dayList]="dayList" (dayListFilter)="dayListFiltered=$event"></a13-day-filters>
 
-    <!-- Days  | filterBy:dayFilter | dateFilter : dateSince : dateUntil"-->
+    <!-- Days -->
     <div class="mt-1">
       <ng-container *ngFor="let day of dayListFiltered">
+        <button *ngIf="day.firstOfMonth" mat-button class="mat-hint first-of-month">
+          <span *ngIf="day.thisYear">{{ day.date | date: 'MMMM' }}</span>
+          <span *ngIf="!day.thisYear">{{ day.date | date: "MMMM '\'\yy" }}</span>
+        </button>
         <a13-day-card [(day)]="day"></a13-day-card>
       </ng-container>
     </div>
