--- a/src/app/shared/components/toast/toast.component.html
+++ b/src/app/shared/components/toast/toast.component.html
@@ -23,7 +23,7 @@
     <!-- Spacer -->
     <span fxFlex></span>
 
-    <div fxFLex="nogrow">
+    <div class="pl-q" fxFLex="nogrow">
       <!-- buttons -->
       <button *ngIf="!data?.navigate && !data?.action" mat-button (click)="close()">{{'OK' | translate}}</button>
       <button *ngIf="data?.navigate" mat-flat-button color="primary" [routerLink]="data?.navigate?.route" (click)="close()">{{data?.navigate?.text | translate}}</button>
