--- a/src/app/classroom/components/header/header.component.html
+++ b/src/app/classroom/components/header/header.component.html
@@ -19,7 +19,7 @@
 
     <!-- Seach button -->
     <button *ngIf="headerConfig?.search" class="menu-button mr-q" mat-icon-button (click)="toggleSearch()" attr.aria-label="{{'SEARCH' | translate}}">
-      <fa-icon class="mat-icon-18" [icon]="headerService?.searchStatus ? 'search-minus' : 'search'"></fa-icon>
+      <fa-icon class="mat-icon-18" [icon]="headerService?.searchStatus ? 'times' : 'filter'"></fa-icon>
     </button>
 
     <!-- Menu phone -->
