--- a/src/app/classroom/components/title-logo/title-logo.component.html
+++ b/src/app/classroom/components/title-logo/title-logo.component.html
@@ -1,4 +1,4 @@
 <div fxLayoutAlign="start center">
   <h1 *ngIf="showTitle" class="header-main-title mr-h"> {{ 'CLASSROOM.NAME' | translate }} </h1>
-  <img *ngIf="showLogo" src="/assets/svgs/logo-blue.svg" alt="{{ 'APP_TITLE' | translate }}" class="logo-header">
+  <img *ngIf="showLogo" src="/assets/svgs/logo-transparent.svg" alt="{{ 'APP_TITLE' | translate }}" class="logo-header">
 </div>
